fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ margin: 0;
   #parent {
     margin: -60px;
   }
-  
+
   .chatbot {
       width: 90%;
       height: calc(var(--vh, 1vh) * 90);
@@ -124,7 +124,7 @@ margin: 0;
     left: 0;
     background-color: #111; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 0px; /* Place content 60px from the top */
+    padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
